[tool.poetry]
name = "canvas-playground"
version = "0.0.1.dev0"
description = "Canvas Playground"
authors = ["Wyatt Baldwin <Wyatt Baldwin>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "canvas_playground", from = "src" }
]

include = [
    "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = "^3.9"
org-djangokit-core = "*"
org-djangokit-cli = "*"

[tool.poetry.group.dev.dependencies]
org-djangokit-core = { path = "../djangokit/core", develop = true }
org-djangokit-cli = { path = "../djangokit/cli", develop = true }

black = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
